--- a/Aplicacion web/SimRend/SimRend/Views/DeclaracionGastos/VerDeclaracionGastos.cshtml
+++ b/Aplicacion web/SimRend/SimRend/Views/DeclaracionGastos/VerDeclaracionGastos.cshtml
@@ -16,161 +16,141 @@
 
 <div class="br-pagebody">
     <div class="br-section-wrapper">
-        <div class="card bd-0">
-            <div class="card-header bg-teal-info bd bd-0 tx-white-8">
-                Resumen de la declaración de gastos
-            </div><!-- card-header -->
-
-            <div class="card-body bd bd-t-0 rounded-bottom-0">
-                <div class="row row-sm">
-                    <div class="form-group wd-auto col-lg-4 col-md-12">
-                        <label class="form-control-label">Número de resolucion:</label>
-                        <div class="input-group">
-                            <div class="input-group-prepend">
-                                <span class="input-group-text"><i class="fas fa-fingerprint tx-16 lh-0 op-6 fa-fw"></i></span>
-                            </div>
-                            <input name="numeroResolucion" class="form-control" id="numeroResolucion" readonly type="text" placeholder="Numero de resolución">
+        <div class="form-layout">
+            <div class="row mg-b-25">
+                <div class="form-group wd-auto col-lg-4 col-md-12">
+                    <label class="form-control-label">Número de resolucion:</label>
+                    <div class="input-group">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text"><i class="fas fa-fingerprint tx-16 lh-0 op-6 fa-fw"></i></span>
                         </div>
+                        <input name="numeroResolucion" class="form-control" id="numeroResolucion" readonly type="text" placeholder="Numero de resolución">
                     </div>
-                    <div class="form-group wd-auto col-lg-4 col-md-12">
-                        <label class="form-control-label">Fecha límite para declarar gastos: </label>
-                        <div class="input-group">
-                            <div class="input-group-prepend">
-                                <div class="input-group-text wd-xs-45">
-                                    <i class="fa fa-calendar-alt tx-16 lh-0 op-6 fa-fw"></i>
-                                </div>
+                </div>
+                <div class="form-group wd-auto col-lg-4 col-md-12">
+                    <label class="form-control-label">Fecha límite para declarar gastos: </label>
+                    <div class="input-group">
+                        <div class="input-group-prepend">
+                            <div class="input-group-text wd-xs-45">
+                                <i class="fa fa-calendar-alt tx-16 lh-0 op-6 fa-fw"></i>
                             </div>
-                            <input name="fechaLimite" class="form-control" id="fechaLimite" readonly type="text" placeholder="Fecha límite">
                         </div>
+                        <input name="fechaLimite" class="form-control" id="fechaLimite" readonly type="text" placeholder="Fecha límite">
                     </div>
-                    <div class="form-group wd-auto col-lg-4 col-md-12">
-                        <label class="form-control-label">Días restante: </label>
-                        <div class="input-group">
-                            <div class="input-group-prepend">
-                                <div class="input-group-text wd-xs-45">
-                                    <i class="fa fa-calendar-alt tx-16 lh-0 op-6 fa-fw"></i>
-                                </div>
+                </div>
+                <div class="form-group wd-auto col-lg-4 col-md-12">
+                    <label class="form-control-label">Días restante: </label>
+                    <div class="input-group">
+                        <div class="input-group-prepend">
+                            <div class="input-group-text wd-xs-45">
+                                <i class="fa fa-calendar-alt tx-16 lh-0 op-6 fa-fw"></i>
                             </div>
-                            <input name="diasRestantes" class="form-control" id="diasRestantes" readonly type="text" placeholder="Dias restantes">
                         </div>
+                        <input name="diasRestantes" class="form-control" id="diasRestantes" readonly type="text" placeholder="Dias restantes">
+                    </div>
+                </div>
+                <div class="form-group wd-auto col-lg-4 col-md-12">
+                    <label class="form-control-label">Monto total solicitado($): </label>
+                    <div class="input-group">
+                        <div class="input-group-prepend">
+                            <div class="input-group-text wd-xs-45">
+                                <i class="fa fa-money-bill-wave tx-16 lh-0 op-6 fa-fw"></i>
+                            </div>
+                        </div>
+                        <input name="totaLSolicitado" class="form-control" id="totalSolicitado" readonly type="text" placeholder="Monto total solicitado">
+                    </div>
+                </div>
+                <div class="form-group wd-auto col-lg-4 col-md-12">
+                    <label class="form-control-label">Monto total documentos($): </label>
+                    <div class="input-group">
+                        <div class="input-group-prepend">
+                            <div class="input-group-text wd-xs-45">
+                                <i class="fa fa-money-bill-wave tx-16 lh-0 op-6 fa-fw"></i>
+                            </div>
+                        </div>
+                        <input name="totalDocumentos" class="form-control" id="totalDocumentos" readonly type="text" placeholder="Monto total documentos">
+                    </div>
+                </div>
+                <div class="form-group wd-auto col-lg-4 col-md-12">
+                    <label class="form-control-label">Monto total rendido($): </label>
+                    <div class="input-group">
+                        <div class="input-group-prepend">
+                            <div class="input-group-text wd-xs-45">
+                                <i class="fa fa-money-bill-wave tx-16 lh-0 op-6 fa-fw"></i>
+                            </div>
+                        </div>
+                        <input name="totalRendido" class="form-control" id="totalRendido" readonly type="text" placeholder="Monto total rendido">
+                    </div>
+                </div>
+                <div class="form-group wd-auto col-lg-12 col-md-12">
+                    <label class="form-control-label">Unidad:</label>
+                    <div class="input-group">
+                        <div class="input-group-prepend">
+                            <div class="input-group-text wd-xs-45">
+                                <i class="fas fa-building  tx-16 lh-0 op-6 fa-fw"></i>
+                            </div>
+                        </div>
+                        <input name="unidad" class="form-control" id="unidad" readonly type="text" placeholder="Unidad">
+                    </div>
+                </div>
+                <div class="form-group wd-auto col-lg-6 col-md-12">
+                    <label class="form-control-label">Nombre jefe directo: </label>
+                    <div class="input-group">
+                        <div class="input-group-prepend">
+                            <div class="input-group-text wd-xs-45">
+                                <i class="fa fa-user tx-16 lh-0 op-6 fa-fw"></i>
+                            </div>
+                        </div>
+                        <input name="jefeDirecto" class="form-control" id="jefeDirecto" readonly type="text" placeholder="Nombre jefe directo">
                     </div>
                 </div>
 
-                <div class="row row-sm">
-                    <div class="form-group wd-auto col-lg-4 col-md-12">
-                        <label class="form-control-label">Monto total solicitado($): </label>
-                        <div class="input-group">
-                            <div class="input-group-prepend">
-                                <div class="input-group-text wd-xs-45">
-                                    <i class="fa fa-money-bill-wave tx-16 lh-0 op-6 fa-fw"></i>
-                                </div>
+                <div class="form-group wd-auto col-lg-6 col-md-12">
+                    <label class="form-control-label">Fono anexo: </label>
+                    <div class="input-group">
+                        <div class="input-group-prepend">
+                            <div class="input-group-text wd-xs-45">
+                                <i class="fas fa-phone tx-16 lh-0 op-6 fa-fw"></i>
                             </div>
-                            <input name="totaLSolicitado" class="form-control" id="totalSolicitado" readonly type="text" placeholder="Monto total solicitado">
                         </div>
-                    </div>
-                    <div class="form-group wd-auto col-lg-4 col-md-12">
-                        <label class="form-control-label">Monto total documentos($): </label>
-                        <div class="input-group">
-                            <div class="input-group-prepend">
-                                <div class="input-group-text wd-xs-45">
-                                    <i class="fa fa-money-bill-wave tx-16 lh-0 op-6 fa-fw"></i>
-                                </div>
-                            </div>
-                            <input name="totalDocumentos" class="form-control" id="totalDocumentos" readonly type="text" placeholder="Monto total documentos">
-                        </div>
-                    </div>
-                    <div class="form-group wd-auto col-lg-4 col-md-12">
-                        <label class="form-control-label">Monto total rendido($): </label>
-                        <div class="input-group">
-                            <div class="input-group-prepend">
-                                <div class="input-group-text wd-xs-45">
-                                    <i class="fa fa-money-bill-wave tx-16 lh-0 op-6 fa-fw"></i>
-                                </div>
-                            </div>
-                            <input name="totalRendido" class="form-control" id="totalRendido" readonly type="text" placeholder="Monto total rendido">
-                        </div>
+                        <input name="fonoAnexo" class="form-control" id="fonoAnexo" readonly type="text" placeholder="Fono anexo">
                     </div>
                 </div>
-
-                <div class="row row-sm">
-                    <div class="form-group wd-auto col-lg-12 col-md-12">
-                        <label class="form-control-label">Unidad:</label>
-                        <div class="input-group">
-                            <div class="input-group-prepend">
-                                <div class="input-group-text wd-xs-45">
-                                    <i class="fas fa-building  tx-16 lh-0 op-6 fa-fw"></i>
-                                </div>
+                <div class="form-group wd-auto col-lg-6 col-md-12">
+                    <label class="form-control-label">Responsable del fondo: </label>
+                    <div class="input-group">
+                        <div class="input-group-prepend">
+                            <div class="input-group-text wd-xs-45">
+                                <i class="fa fa-user tx-16 lh-0 op-6 fa-fw"></i>
                             </div>
-                            <input name="unidad" class="form-control" id="unidad" readonly type="text" placeholder="Unidad">
                         </div>
+                        <input name="responsable" type="text" class="form-control" readonly placeholder="Responsable del fondo" id="responsable">
                     </div>
                 </div>
-                <div class="row row-sm">
-                    <div class="form-group wd-auto col-lg-6 col-md-12">
-                        <label class="form-control-label">Nombre jefe directo: </label>
-                        <div class="input-group">
-                            <div class="input-group-prepend">
-                                <div class="input-group-text wd-xs-45">
-                                    <i class="fa fa-user tx-16 lh-0 op-6 fa-fw"></i>
-                                </div>
+                <div class="form-group wd-auto col-lg-6 col-md-12">
+                    <label class="form-control-label">RUN Responsable: </label>
+                    <div class="input-group">
+                        <div class="input-group-prepend">
+                            <div class="input-group-text wd-xs-45">
+                                <i class="fas fa-address-card tx-16 lh-0 op-6 fa-fw"></i>
                             </div>
-                            <input name="jefeDirecto" class="form-control" id="jefeDirecto" readonly type="text" placeholder="Nombre jefe directo">
                         </div>
-                    </div>
-
-                    <div class="form-group wd-auto col-lg-6 col-md-12">
-                        <label class="form-control-label">Fono anexo: </label>
-                        <div class="input-group">
-                            <div class="input-group-prepend">
-                                <div class="input-group-text wd-xs-45">
-                                    <i class="fas fa-phone tx-16 lh-0 op-6 fa-fw"></i>
-                                </div>
-                            </div>
-                            <input name="fonoAnexo" class="form-control" id="fonoAnexo" readonly type="text" placeholder="Fono anexo">
-                        </div>
+                        <input name="runResponsable" type="text" class="form-control" readonly placeholder="RUN del responsable" id="runResponsable">
                     </div>
                 </div>
-
-
-                <div class="row row-sm">
-                    <div class="form-group wd-auto col-lg-6 col-md-12">
-                        <label class="form-control-label">Responsable del fondo: </label>
-                        <div class="input-group">
-                            <div class="input-group-prepend">
-                                <div class="input-group-text wd-xs-45">
-                                    <i class="fa fa-user tx-16 lh-0 op-6 fa-fw"></i>
-                                </div>
+                <div class="form-group wd-auto col-lg-12 col-md-12">
+                    <label class="form-control-label">Email: </label>
+                    <div class="input-group">
+                        <div class="input-group-prepend">
+                            <div class="input-group-text wd-xs-45">
+                                <i class="fas fa-at tx-16 lh-0 op-6 fa-fw"></i>
                             </div>
-                            <input name="responsable" type="text" class="form-control" readonly placeholder="Responsable del fondo" id="responsable">
                         </div>
-                    </div>
-                    <div class="form-group wd-auto col-lg-6 col-md-12">
-                        <label class="form-control-label">RUN Responsable: </label>
-                        <div class="input-group">
-                            <div class="input-group-prepend">
-                                <div class="input-group-text wd-xs-45">
-                                    <i class="fas fa-address-card tx-16 lh-0 op-6 fa-fw"></i>
-                                </div>
-                            </div>
-                            <input name="runResponsable" type="text" class="form-control" readonly placeholder="RUN del responsable" id="runResponsable">
-                        </div>
-                    </div>
-                </div>
-                <div class="row row-sm">
-                    <div class="form-group wd-auto col-lg-12 col-md-12">
-                        <label class="form-control-label">Email: </label>
-                        <div class="input-group">
-                            <div class="input-group-prepend">
-                                <div class="input-group-text wd-xs-45">
-                                    <i class="fas fa-at tx-16 lh-0 op-6 fa-fw"></i>
-                                </div>
-                            </div>
-                            <input name="emailResponsable" class="form-control" id="emailResponsable" readonly type="text" placeholder="Email responsable">
-                        </div>
+                        <input name="emailResponsable" class="form-control" id="emailResponsable" readonly type="text" placeholder="Email responsable">
                     </div>
                 </div>
             </div>
-            <div class="card-footer bd bd-t-0">
+            <div class="form-layout-footer">
                 <div class="row" id="acciones">
 
                 </div>
@@ -223,10 +203,9 @@
             </div><!-- modal-content -->
         </div><!-- modal-dialog -->
     </div><!-- modal -->
-
 </div><!-- br-pagebody -->
 
-@section scripts{ 
+@section scripts{
     <script>
         $(document).ready(function ()
         {
@@ -286,8 +265,8 @@
                     $('#emailResponsable').val(respuesta.proceso.responsable.email);
                     verOpciones(respuesta.proceso.estado, respuesta.proceso.estadoFinal);
                 }
-            }); 
-            
+            });
+
         }
 
         function formatoNumero(num)
@@ -349,7 +328,7 @@
                         break;
                 }
             }
-            
+
 
             $('#acciones').empty().append(acciones);
 
@@ -365,7 +344,7 @@
                 window.location.href = '/Proceso/Procesos/';
             });
 
-            
+
 
             $('#generar').click(function (e)
             {
