--- a/Aplicacion web/SimRend/SimRend/Views/Resolucion/VerResolucion.cshtml
+++ b/Aplicacion web/SimRend/SimRend/Views/Resolucion/VerResolucion.cshtml
@@ -18,13 +18,9 @@
 <div class="br-pagebody">
     <div class="br-section-wrapper">
 
-        <div class="card bd-0 mg-t-20">
-            <div class="card-header bg-teal-info bd bd-0 tx-white-8 tx-bold">
-                Datos de la resolución
-            </div><!-- card-header -->
-
-            <div class="card-body bd bd-t-0 rounded-bottom-0">
-                <div class="form-group wd-auto">
+        <div class="form-layout">
+            <div class="row mg-b-25">
+                <div class="form-group wd-auto col-lg-12 col-md-12">
                     <label class="form-control-label">Número de resolución:</label>
                     <div class="input-group">
                         <div class="input-group-prepend">
@@ -34,7 +30,7 @@
                     </div>
                 </div>
 
-                <div class="form-group wd-auto">
+                <div class="form-group wd-auto col-lg-12 col-md-12">
                     <label class="form-control-label">Año de la resolución: </label>
                     <div class="input-group">
                         <div class="input-group-prepend">
@@ -46,7 +42,7 @@
                     </div>
                 </div>
 
-                <div class="form-group wd-auto">
+                <div class="form-group wd-auto col-lg-12 col-md-12">
                     <label class="form-control-label">Copia del documento: </label>
 
                     <div class="input-group">
@@ -62,184 +58,184 @@
                     </div>
                 </div>
             </div>
-            <div class="card-footer bd bd-t-0">
+            <div class="form-layout-footer">
                 <div class="row" id="acciones">
 
                 </div>
             </div>
         </div>
+
     </div><!-- br-section-wrapper -->
-    <!-- MODAL INFORMACION -->
-    <div id="modal-informacion" class="modal fade" data-backdrop="static" data-keyboard="false">
-        <div class="modal-dialog modal-dialog-centered" role="document">
-            <div class="modal-content tx-size-sm">
-                <div class="modal-body tx-center pd-y-20 pd-x-20">
-                    <i class="icon ion-ios-checkmark-outline tx-100 tx-success lh-1 mg-t-20 d-inline-block"></i>
-                    <h4 class="tx-success tx-semibold mg-b-20" id="title-informacion"></h4>
-                    <p class="mg-b-20 mg-x-20" id="body-informacion"></p>
-                    <button id="btn-ResolucionEliminada" type="button" class="btn btn-success tx-11 tx-uppercase pd-y-12 pd-x-25 tx-mont tx-medium mg-b-20" data-dismiss="modal" aria-label="Close">
-                        Aceptar
-                    </button>
-                </div><!-- modal-body -->
-            </div><!-- modal-content -->
-        </div><!-- modal-dialog -->
-    </div><!-- modal -->
-
-    <!-- MODAL PREGUNTAR ELIMINAR RESOLUCION -->
-    <div class="modal fade" id="modal-confirmar-eliminar">
-        <div class="modal-dialog modal-dialog-centered" role="document">
-            <div class="modal-content tx-size-sm">
-                <div class="modal-body tx-center pd-y-20 pd-x-20">
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">×</span>
-                    </button>
-                    <i class="ionicons ion-ios-help-outline tx-100 tx-success lh-1 mg-t-20 d-inline-block"></i>
-                    <h4 class="tx-success mg-b-20" id="title-confirmar-eliminar"></h4>
-                    <p class="mg-b-20 mg-x-20" id="body-confirmar-eliminar"></p>
-                    <button type="button" data-dismiss="modal" class="btn btn-secondary tx-11 tx-uppercase pd-y-12 pd-x-25 tx-mont tx-medium mg-b-20">
-                        Cancelar
-                    </button>
-                    <button type="button" id="btnConfirmarEliminar" class="btn btn-success tx-11 tx-uppercase pd-y-12 pd-x-25 tx-mont tx-medium mg-b-20">
-                        Aceptar
-                    </button>
-                </div><!-- modal-body -->
+            <!-- MODAL INFORMACION -->
+            <div id="modal-informacion" class="modal fade" data-backdrop="static" data-keyboard="false">
+                <div class="modal-dialog modal-dialog-centered" role="document">
+                    <div class="modal-content tx-size-sm">
+                        <div class="modal-body tx-center pd-y-20 pd-x-20">
+                            <i class="icon ion-ios-checkmark-outline tx-100 tx-success lh-1 mg-t-20 d-inline-block"></i>
+                            <h4 class="tx-success tx-semibold mg-b-20" id="title-informacion"></h4>
+                            <p class="mg-b-20 mg-x-20" id="body-informacion"></p>
+                            <button id="btn-ResolucionEliminada" type="button" class="btn btn-success tx-11 tx-uppercase pd-y-12 pd-x-25 tx-mont tx-medium mg-b-20" data-dismiss="modal" aria-label="Close">
+                                Aceptar
+                            </button>
+                        </div><!-- modal-body -->
+                    </div><!-- modal-content -->
+                </div><!-- modal-dialog -->
+            </div><!-- modal -->
+            <!-- MODAL PREGUNTAR ELIMINAR RESOLUCION -->
+            <div class="modal fade" id="modal-confirmar-eliminar">
+                <div class="modal-dialog modal-dialog-centered" role="document">
+                    <div class="modal-content tx-size-sm">
+                        <div class="modal-body tx-center pd-y-20 pd-x-20">
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">×</span>
+                            </button>
+                            <i class="ionicons ion-ios-help-outline tx-100 tx-success lh-1 mg-t-20 d-inline-block"></i>
+                            <h4 class="tx-success mg-b-20" id="title-confirmar-eliminar"></h4>
+                            <p class="mg-b-20 mg-x-20" id="body-confirmar-eliminar"></p>
+                            <button type="button" data-dismiss="modal" class="btn btn-secondary tx-11 tx-uppercase pd-y-12 pd-x-25 tx-mont tx-medium mg-b-20">
+                                Cancelar
+                            </button>
+                            <button type="button" id="btnConfirmarEliminar" class="btn btn-success tx-11 tx-uppercase pd-y-12 pd-x-25 tx-mont tx-medium mg-b-20">
+                                Aceptar
+                            </button>
+                        </div><!-- modal-body -->
+                    </div>
+                </div>
             </div>
-        </div>
-    </div>
 
-    <!-- MODAL ERROR -->
-    <div id="modal-alerta" class="modal fade">
-        <div class="modal-dialog modal-dialog-centered" role="document">
-            <div class="modal-content tx-size-sm">
-                <div class="modal-body tx-center pd-y-20 pd-x-20">
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                    <i class="icon icon ion-ios-close-outline tx-100 tx-danger lh-1 mg-t-20 d-inline-block"></i>
-                    <h4 class="tx-danger  tx-semibold mg-b-20" id="title-alerta"></h4>
-                    <p class="mg-b-20 mg-x-20" id="body-alerta"></p>
-                    <button type="button" class="btn btn-danger tx-11 tx-uppercase pd-y-12 pd-x-25 tx-mont tx-medium mg-b-20" data-dismiss="modal" aria-label="Close">
-                        Aceptar
-                    </button>
-                </div><!-- modal-body -->
-            </div><!-- modal-content -->
-        </div><!-- modal-dialog -->
-    </div><!-- modal -->
-</div><!-- br-pagebody -->
+            <!-- MODAL ERROR -->
+            <div id="modal-alerta" class="modal fade">
+                <div class="modal-dialog modal-dialog-centered" role="document">
+                    <div class="modal-content tx-size-sm">
+                        <div class="modal-body tx-center pd-y-20 pd-x-20">
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                            <i class="icon icon ion-ios-close-outline tx-100 tx-danger lh-1 mg-t-20 d-inline-block"></i>
+                            <h4 class="tx-danger  tx-semibold mg-b-20" id="title-alerta"></h4>
+                            <p class="mg-b-20 mg-x-20" id="body-alerta"></p>
+                            <button type="button" class="btn btn-danger tx-11 tx-uppercase pd-y-12 pd-x-25 tx-mont tx-medium mg-b-20" data-dismiss="modal" aria-label="Close">
+                                Aceptar
+                            </button>
+                        </div><!-- modal-body -->
+                    </div><!-- modal-content -->
+                </div><!-- modal-dialog -->
+            </div><!-- modal -->
+        </div><!-- br-pagebody -->
 
 
-@section scripts
+        @section scripts
 {
-    <script src="~/js/jquery.numeric.js"></script>
-    <script>
-        $(document).ready(function ()
-        {
-            obtenerResolucion();
-        });
-
-        $("#descargarResolucion").click(function (e)
-        {
-            e.preventDefault();
-            window.location.href = '/Resolucion/DescargarResolucion';
-        });
-
-        function obtenerResolucion()
-        {
-            $.ajax({
-                url: "/Resolucion/LeerResolucion",
-                method: "POST",
-                async: "false",
-                data: "",
-                success: function (respuesta)
+            <script src="~/js/jquery.numeric.js"></script>
+            <script>
+                $(document).ready(function ()
                 {
-                    //console.log(respuesta.resolucion);
-                    var rutaDoc = respuesta.resolucion.copiaDoc.split("\\");
-                    //console.log(rutaDoc);
-                    $("#numResolucion").val(respuesta.resolucion.numResolucion);
-                    $("#anioResolucion").val(respuesta.resolucion.anioResolucion);
-                    $("#nombreArchivo").val(rutaDoc[rutaDoc.length - 1]);
-                    verOpciones(respuesta.estado);
-                }
-            });
-        }
+                    obtenerResolucion();
+                });
 
-        function verOpciones(opcion)
-        {
-            var acciones = "";
-            switch (opcion)
-            {
-                case 3:
-                    acciones = '<div class="form-group  col-lg-6 col-md-6 col-sm-12"><button class="btn btn-secondary" id="volverProceso" style="width:100%"><i class="fas fa-sitemap"></i> Volver a proceso</button> </div>' +
-                        '<div class="form-group  col-lg-6 col-md-6 col-sm-12"><button class="btn btn-secondary" id="volverProcesos" style="width:100%"><i class="fas fa-clipboard-list"></i> Volver a procesos</button> </div>' +
-                        '<div class="form-group  col-lg-6 col-md-6 col-sm-12"><button class="modal-effect btn btn-warning" data-effect="effect-just-me" id = "modificar" style="width:100%"><i class="fas fa-pen-square"></i> Modificar</button> </div>' +
-                        '<div class="form-group  col-lg-6 col-md-6 col-sm-12"><button class="btn btn-danger" id = "eliminar" style="width:100%"><i class="fas fa-trash"></i> Eliminar</button> </div>';
-                    break;
-                default:
-                    acciones = '<div class="form-group  col-lg-6 col-md-6 col-sm-12"><button class="btn btn-secondary" id="volverProceso" style="width:100%"><i class="fas fa-sitemap"></i> Volver a proceso</button> </div>' +
-                        '<div class="form-group  col-lg-6 col-md-6 col-sm-12"><button class="btn btn-secondary" id="volverProcesos" style="width:100%"><i class="fas fa-clipboard-list"></i> Volver a procesos</button> </div>';
-                    break;
-            }
-
-            $('#acciones').empty().append(acciones);
-
-            $('#volverProceso').click(function (e)
-            {
-                e.preventDefault();
-                window.location.href = '/Proceso/VerProceso';
-            });
-
-            $('#volverProcesos').click(function (e)
-            {
-                e.preventDefault();
-                window.location.href = '/Proceso/Procesos/';
-            });
-
-            $('#modificar').click(function (e)
-            {
-                e.preventDefault();
-                window.location.href = '/Resolucion/ActualizarResolucion';
-            });
-
-            $('#eliminar').click(function (e)
-            {
-                $('#title-confirmar-eliminar').text("Eliminar datos");
-                $('#body-confirmar-eliminar').text("¿Está seguro que desea eliminar la resolución?");
-                $('#modal-confirmar-eliminar').modal('show');
-            });
-        }
-
-        $('#btnConfirmarEliminar').click(function (e)
-        {
-            e.preventDefault();
-            $('#modal-confirmar-eliminar').modal('hide');
-            $.ajax({
-                url: "/Resolucion/EliminarResolucion",
-                method: "POST",
-                async: "false",
-                data: "",
-                success: function (respuesta)
+                $("#descargarResolucion").click(function (e)
                 {
-                    if (respuesta.validar)
-                    {
-                        $('#title-informacion').text(respuesta.titulo);
-                        $('#body-informacion').text(respuesta.msj);
-                        $('#modal-informacion').modal('show');
-                    }
-                    else
-                    {
-                        $('#title-alerta').text(respuesta.titulo);
-                        $('#body-alerta').text(respuesta.msj);
-                        $('#modal-alerta').modal('show');
-                    }
+                    e.preventDefault();
+                    window.location.href = '/Resolucion/DescargarResolucion';
+                });
+
+                function obtenerResolucion()
+                {
+                    $.ajax({
+                        url: "/Resolucion/LeerResolucion",
+                        method: "POST",
+                        async: "false",
+                        data: "",
+                        success: function (respuesta)
+                        {
+                            //console.log(respuesta.resolucion);
+                            var rutaDoc = respuesta.resolucion.copiaDoc.split("\\");
+                            //console.log(rutaDoc);
+                            $("#numResolucion").val(respuesta.resolucion.numResolucion);
+                            $("#anioResolucion").val(respuesta.resolucion.anioResolucion);
+                            $("#nombreArchivo").val(rutaDoc[rutaDoc.length - 1]);
+                            verOpciones(respuesta.estado);
+                        }
+                    });
                 }
-            });
-        });
 
-        $('#btn-ResolucionEliminada').click(function (e)
-        {
-            e.preventDefault();
-            window.location.href = '/Proceso/VerProceso';
-        });
+                function verOpciones(opcion)
+                {
+                    var acciones = "";
+                    switch (opcion)
+                    {
+                        case 3:
+                            acciones = '<div class="form-group  col-lg-6 col-md-6 col-sm-12"><button class="btn btn-secondary" id="volverProceso" style="width:100%"><i class="fas fa-sitemap"></i> Volver a proceso</button> </div>' +
+                                '<div class="form-group  col-lg-6 col-md-6 col-sm-12"><button class="btn btn-secondary" id="volverProcesos" style="width:100%"><i class="fas fa-clipboard-list"></i> Volver a procesos</button> </div>' +
+                                '<div class="form-group  col-lg-6 col-md-6 col-sm-12"><button class="modal-effect btn btn-warning" data-effect="effect-just-me" id = "modificar" style="width:100%"><i class="fas fa-pen-square"></i> Modificar</button> </div>' +
+                                '<div class="form-group  col-lg-6 col-md-6 col-sm-12"><button class="btn btn-danger" id = "eliminar" style="width:100%"><i class="fas fa-trash"></i> Eliminar</button> </div>';
+                            break;
+                        default:
+                            acciones = '<div class="form-group  col-lg-6 col-md-6 col-sm-12"><button class="btn btn-secondary" id="volverProceso" style="width:100%"><i class="fas fa-sitemap"></i> Volver a proceso</button> </div>' +
+                                '<div class="form-group  col-lg-6 col-md-6 col-sm-12"><button class="btn btn-secondary" id="volverProcesos" style="width:100%"><i class="fas fa-clipboard-list"></i> Volver a procesos</button> </div>';
+                            break;
+                    }
 
-    </script>
-}
+                    $('#acciones').empty().append(acciones);
+
+                    $('#volverProceso').click(function (e)
+                    {
+                        e.preventDefault();
+                        window.location.href = '/Proceso/VerProceso';
+                    });
+
+                    $('#volverProcesos').click(function (e)
+                    {
+                        e.preventDefault();
+                        window.location.href = '/Proceso/Procesos/';
+                    });
+
+                    $('#modificar').click(function (e)
+                    {
+                        e.preventDefault();
+                        window.location.href = '/Resolucion/ActualizarResolucion';
+                    });
+
+                    $('#eliminar').click(function (e)
+                    {
+                        $('#title-confirmar-eliminar').text("Eliminar datos");
+                        $('#body-confirmar-eliminar').text("¿Está seguro que desea eliminar la resolución?");
+                        $('#modal-confirmar-eliminar').modal('show');
+                    });
+                }
+
+                $('#btnConfirmarEliminar').click(function (e)
+                {
+                    e.preventDefault();
+                    $('#modal-confirmar-eliminar').modal('hide');
+                    $.ajax({
+                        url: "/Resolucion/EliminarResolucion",
+                        method: "POST",
+                        async: "false",
+                        data: "",
+                        success: function (respuesta)
+                        {
+                            if (respuesta.validar)
+                            {
+                                $('#title-informacion').text(respuesta.titulo);
+                                $('#body-informacion').text(respuesta.msj);
+                                $('#modal-informacion').modal('show');
+                            }
+                            else
+                            {
+                                $('#title-alerta').text(respuesta.titulo);
+                                $('#body-alerta').text(respuesta.msj);
+                                $('#modal-alerta').modal('show');
+                            }
+                        }
+                    });
+                });
+
+                $('#btn-ResolucionEliminada').click(function (e)
+                {
+                    e.preventDefault();
+                    window.location.href = '/Proceso/VerProceso';
+                });
+
+            </script>
+        }
