--- a/Aplicacion web/SimRend/SimRend/Views/Proceso/VerProceso.cshtml
+++ b/Aplicacion web/SimRend/SimRend/Views/Proceso/VerProceso.cshtml
@@ -162,37 +162,63 @@
                 data: "",
                 success: function (respuesta) {
                     datosPrincipales(respuesta.solicitud);
-                    verOpciones(respuesta.estado);
+                    verOpciones(respuesta.estado, respuesta.estadoFinal);
                 }
             }); 
         }
 
-        function verOpciones(opcion) {
+        function verOpciones(estado, estadoFinal) {
             var acciones = '';
-            switch (opcion) {
+            switch (estado) {
                 case 1:
-                    acciones = '<div class="form-group  col-lg-6 col-md-6 col-sm-12"><button class="btn btn-secondary" id="volver" style="width:100%"><i class="fas fa-arrow-alt-circle-left"></i> Volver</button> </div>' +
-                        '<div class="form-group  col-lg-6 col-md-6 col-sm-12"><button class="btn btn-info" id = "editarSolicitud" style="width:100%"><i class="fas fa-edit"></i> Solicitud</button> </div>';
+                    if (estadoFinal == 'Abierto')
+                    {
+                        acciones = '<div class="form-group  col-lg-6 col-md-6 col-sm-12"><button class="btn btn-secondary" id="volver" style="width:100%"><i class="fas fa-arrow-alt-circle-left"></i> Volver</button> </div>' +
+                            '<div class="form-group  col-lg-6 col-md-6 col-sm-12"><button class="btn btn-info" id = "editarSolicitud" style="width:100%"><i class="fas fa-edit"></i> Solicitud</button> </div>';
+                    }
+                    else
+                    {
+                        acciones = '<div class="form-group  col-lg-6 col-md-6 col-sm-12"><button class="btn btn-secondary" id="volver" style="width:100%"><i class="fas fa-arrow-alt-circle-left"></i> Volver</button> </div>' +
+                            '<div class="form-group col-lg-6 col-md-6 col-sm-12"><button class="btn btn-info" id="verSolicitud" style="width:100%"><i class="fas fa-eye"></i> Solicitud</button> </div>';
+                    }
+                    
                     break;
                 case 2:
-                    acciones = '<div class="form-group  col-lg-4 col-md-4 col-sm-12"><button class="btn btn-secondary" id="volver" style="width:100%"><i class="fas fa-arrow-alt-circle-left"></i> Volver</button> </div>' +
-                        '<div class="form-group col-lg-4 col-md-4 col-sm-12"><button class="btn btn-secondary" id="verSolicitud" style="width:100%"><i class="fas fa-eye"></i> Solicitud</button> </div>' +
-                        '<div class="form-group  col-lg-4 col-md-4 col-sm-12"><button class="btn btn-info " id = "agregarResolucion" style="width:100%"><i class="fas fa-plus-circle"></i> Resolución</button> </div>';
+                    if (estadoFinal == 'Abierto')
+                    {
+                        acciones = '<div class="form-group  col-lg-4 col-md-4 col-sm-12"><button class="btn btn-secondary" id="volver" style="width:100%"><i class="fas fa-arrow-alt-circle-left"></i> Volver</button> </div>' +
+                            '<div class="form-group col-lg-4 col-md-4 col-sm-12"><button class="btn btn-secondary" id="verSolicitud" style="width:100%"><i class="fas fa-eye"></i> Solicitud</button> </div>' +
+                            '<div class="form-group  col-lg-4 col-md-4 col-sm-12"><button class="btn btn-info " id = "agregarResolucion" style="width:100%"><i class="fas fa-plus-circle"></i> Resolución</button> </div>';
+                    }
+                    else
+                    {
+                        acciones = '<div class="form-group  col-lg-6 col-md-6 col-sm-12"><button class="btn btn-secondary" id="volver" style="width:100%"><i class="fas fa-arrow-alt-circle-left"></i> Volver</button> </div>' +
+                            '<div class="form-group col-lg-6 col-md-6 col-sm-12"><button class="btn btn-info" id="verSolicitud" style="width:100%"><i class="fas fa-eye"></i> Solicitud</button> </div>';
+                    }
+
+                    break;
+                case 3:
+                    if (estadoFinal == 'Abierto')
+                    {
+                        acciones = '<div class="form-group  col-lg-6 col-md-6 col-sm-12"><button class="btn btn-secondary" id="volver" style="width:100%"><i class="fas fa-arrow-alt-circle-left"></i> Volver</button> </div>' +
+                            '<div class="form-group  col-lg-6 col-md-6 col-sm-12"><button class="btn btn-secondary" id="verSolicitud" style="width:100%"><i class="fas fa-eye"></i> Solicitud</button> </div>' +
+                            '<div class="form-group  col-lg-6 col-md-6 col-sm-12"><button class="btn btn-secondary" id="verResolucion" style="width:100%"><i class="fas fa-eye"></i> Resolución</button> </div>' +
+                            '<div class="form-group col-lg-6 col-md-6 col-sm-12"><button class="btn btn-info" id="verDeclaracionGasto" style="width:100%"><i class="fas fa-eye"></i> Declaración de gastos</button> </div>';
+                    }
+                    else
+                    {
+                        acciones = '<div class="form-group  col-lg-4 col-md-4 col-sm-12"><button class="btn btn-secondary" id="volver" style="width:100%"><i class="fas fa-arrow-alt-circle-left"></i> Volver</button> </div>' +
+                            '<div class="form-group  col-lg-4 col-md-4 col-sm-12"><button class="btn btn-info" id="verSolicitud" style="width:100%"><i class="fas fa-eye"></i> Solicitud</button> </div>' +
+                            '<div class="form-group  col-lg-4 col-md-4 col-sm-12"><button class="btn btn-info" id="verResolucion" style="width:100%"><i class="fas fa-eye"></i> Resolución</button> </div>';
+                    }
                     break;
                 default:
                     acciones = '<div class="form-group  col-lg-6 col-md-6 col-sm-12"><button class="btn btn-secondary" id="volver" style="width:100%"><i class="fas fa-arrow-alt-circle-left"></i> Volver</button> </div>' +
-                        '<div class="form-group  col-lg-6 col-md-6 col-sm-12"><button class="btn btn-secondary" id="verSolicitud" style="width:100%"><i class="fas fa-eye"></i> Solicitud</button> </div>' +
-                        '<div class="form-group  col-lg-6 col-md-6 col-sm-12"><button class="btn btn-secondary" id="verResolucion" style="width:100%"><i class="fas fa-eye"></i> Resolución</button> </div>' +
+                        '<div class="form-group  col-lg-6 col-md-6 col-sm-12"><button class="btn btn-info" id="verSolicitud" style="width:100%"><i class="fas fa-eye"></i> Solicitud</button> </div>' +
+                        '<div class="form-group  col-lg-6 col-md-6 col-sm-12"><button class="btn btn-info" id="verResolucion" style="width:100%"><i class="fas fa-eye"></i> Resolución</button> </div>' +
                         '<div class="form-group col-lg-6 col-md-6 col-sm-12"><button class="btn btn-info" id="verDeclaracionGasto" style="width:100%"><i class="fas fa-eye"></i> Declaración de gastos</button> </div>';
-                        /*'<div class="form-group  col-lg-6 col-md-6 col-sm-12"><button class="btn btn-info" id="agregarDeclaracionGasto" style="width:100%"><i class="fas fa-plus-circle"></i> Declaración de gastos</button> </div>';*/
                     break;
-                /*case 4:
-                    acciones = '<div class="form-group  col-lg-6 col-md-6 col-sm-12"><button class="btn btn-secondary" id="volver" style="width:100%"><i class="fas fa-arrow-alt-circle-left"></i> Volver</button> </div>' +
-                        '<div class="form-group  col-lg-6 col-md-6 col-sm-12"><button class="btn btn-secondary" id="verSolicitud" style="width:100%"><i class="fas fa-eye"></i> Solicitud</button> </div>' +
-                        '<div class="form-group  col-lg-6 col-md-6 col-sm-12"><button class="btn btn-secondary" id="verResolucion" style="width:100%"><i class="fas fa-eye"></i> Resolución</button> </div>' +
-                        '<div class="form-group  col-lg-6 col-md-6 col-sm-12"><button class="btn btn-info" id="editarDeclaracionGasto" style="width:100%"><i class="fas fa-edit"></i> Declaración de gastos</button> </div>';
-                    break;
-                case 5:
+                /*case 5:
                     acciones = '<div class="form-group  col-lg-6 col-md-6 col-sm-12"><button class="btn btn-secondary" id="volver" style="width:100%"><i class="fas fa-arrow-alt-circle-left"></i> Volver</button> </div>' +
                         '<div class="form-group col-lg-6 col-md-6 col-sm-12"><button class="btn btn-info" id="verSolicitud" style="width:100%"><i class="fas fa-eye"></i> Solicitud</button> </div>' +
                         '<div class="form-group col-lg-6 col-md-6 col-sm-12"><button class="btn btn-info" id="verResolucion" style="width:100%"><i class="fas fa-eye"></i> Resolución</button> </div>' +
