--- a/Aplicacion web/SimRend/SimRend/Views/Resolucion/VerResolucion.cshtml
+++ b/Aplicacion web/SimRend/SimRend/Views/Resolucion/VerResolucion.cshtml
@@ -86,16 +86,13 @@
                 <div class="modal-dialog modal-dialog-centered" role="document">
                     <div class="modal-content tx-size-sm">
                         <div class="modal-body tx-center pd-y-20 pd-x-20">
-                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                <span aria-hidden="true">×</span>
-                            </button>
-                            <i class="ionicons ion-ios-help-outline tx-100 tx-success lh-1 mg-t-20 d-inline-block"></i>
-                            <h4 class="tx-success mg-b-20" id="title-confirmar-eliminar"></h4>
+                            <i class="ionicons ion-ios-help-outline tx-100 tx-danger lh-1 mg-t-20 d-inline-block"></i>
+                            <h4 class="tx-danger mg-b-20" id="title-confirmar-eliminar"></h4>
                             <p class="mg-b-20 mg-x-20" id="body-confirmar-eliminar"></p>
                             <button type="button" data-dismiss="modal" class="btn btn-secondary tx-11 tx-uppercase pd-y-12 pd-x-25 tx-mont tx-medium mg-b-20">
                                 Cancelar
                             </button>
-                            <button type="button" id="btnConfirmarEliminar" class="btn btn-success tx-11 tx-uppercase pd-y-12 pd-x-25 tx-mont tx-medium mg-b-20">
+                            <button type="button" id="btnConfirmarEliminar" class="btn btn-danger tx-11 tx-uppercase pd-y-12 pd-x-25 tx-mont tx-medium mg-b-20">
                                 Aceptar
                             </button>
                         </div><!-- modal-body -->
@@ -124,118 +121,118 @@
         </div><!-- br-pagebody -->
 
 
-        @section scripts
+@section scripts
 {
-            <script src="~/js/jquery.numeric.js"></script>
-            <script>
-                $(document).ready(function ()
-                {
-                    obtenerResolucion();
-                });
+    <script src="~/js/jquery.numeric.js"></script>
+    <script>
+        $(document).ready(function ()
+        {
+            obtenerResolucion();
+        });
 
-                $("#descargarResolucion").click(function (e)
-                {
-                    e.preventDefault();
-                    window.location.href = '/Resolucion/DescargarResolucion';
-                });
+        $("#descargarResolucion").click(function (e)
+        {
+            e.preventDefault();
+            window.location.href = '/Resolucion/DescargarResolucion';
+        });
 
-                function obtenerResolucion()
+        function obtenerResolucion()
+        {
+            $.ajax({
+                url: "/Resolucion/LeerResolucion",
+                method: "POST",
+                async: "false",
+                data: "",
+                success: function (respuesta)
                 {
-                    $.ajax({
-                        url: "/Resolucion/LeerResolucion",
-                        method: "POST",
-                        async: "false",
-                        data: "",
-                        success: function (respuesta)
-                        {
-                            //console.log(respuesta.resolucion);
-                            var rutaDoc = respuesta.resolucion.copiaDoc.split("\\");
-                            //console.log(rutaDoc);
-                            $("#numResolucion").val(respuesta.resolucion.numResolucion);
-                            $("#anioResolucion").val(respuesta.resolucion.anioResolucion);
-                            $("#nombreArchivo").val(rutaDoc[rutaDoc.length - 1]);
-                            verOpciones(respuesta.estado);
-                        }
-                    });
+                    //console.log(respuesta.resolucion);
+                    var rutaDoc = respuesta.resolucion.copiaDoc.split("\\");
+                    //console.log(rutaDoc);
+                    $("#numResolucion").val(respuesta.resolucion.numResolucion);
+                    $("#anioResolucion").val(respuesta.resolucion.anioResolucion);
+                    $("#nombreArchivo").val(rutaDoc[rutaDoc.length - 1]);
+                    verOpciones(respuesta.estado);
                 }
-
-                function verOpciones(opcion)
-                {
-                    var acciones = "";
-                    switch (opcion)
-                    {
-                        case 3:
-                            acciones = '<div class="form-group  col-lg-6 col-md-6 col-sm-12"><button class="btn btn-secondary" id="volverProceso" style="width:100%"><i class="fas fa-sitemap"></i> Volver a proceso</button> </div>' +
-                                '<div class="form-group  col-lg-6 col-md-6 col-sm-12"><button class="btn btn-secondary" id="volverProcesos" style="width:100%"><i class="fas fa-clipboard-list"></i> Volver a procesos</button> </div>' +
-                                '<div class="form-group  col-lg-6 col-md-6 col-sm-12"><button class="modal-effect btn btn-warning" data-effect="effect-just-me" id = "modificar" style="width:100%"><i class="fas fa-pen-square"></i> Modificar</button> </div>' +
-                                '<div class="form-group  col-lg-6 col-md-6 col-sm-12"><button class="btn btn-danger" id = "eliminar" style="width:100%"><i class="fas fa-trash"></i> Eliminar</button> </div>';
-                            break;
-                        default:
-                            acciones = '<div class="form-group  col-lg-6 col-md-6 col-sm-12"><button class="btn btn-secondary" id="volverProceso" style="width:100%"><i class="fas fa-sitemap"></i> Volver a proceso</button> </div>' +
-                                '<div class="form-group  col-lg-6 col-md-6 col-sm-12"><button class="btn btn-secondary" id="volverProcesos" style="width:100%"><i class="fas fa-clipboard-list"></i> Volver a procesos</button> </div>';
-                            break;
-                    }
-
-                    $('#acciones').empty().append(acciones);
-
-                    $('#volverProceso').click(function (e)
-                    {
-                        e.preventDefault();
-                        window.location.href = '/Proceso/VerProceso';
-                    });
-
-                    $('#volverProcesos').click(function (e)
-                    {
-                        e.preventDefault();
-                        window.location.href = '/Proceso/Procesos/';
-                    });
-
-                    $('#modificar').click(function (e)
-                    {
-                        e.preventDefault();
-                        window.location.href = '/Resolucion/ActualizarResolucion';
-                    });
-
-                    $('#eliminar').click(function (e)
-                    {
-                        $('#title-confirmar-eliminar').text("Eliminar datos");
-                        $('#body-confirmar-eliminar').text("¿Está seguro que desea eliminar la resolución?");
-                        $('#modal-confirmar-eliminar').modal('show');
-                    });
-                }
-
-                $('#btnConfirmarEliminar').click(function (e)
-                {
-                    e.preventDefault();
-                    $('#modal-confirmar-eliminar').modal('hide');
-                    $.ajax({
-                        url: "/Resolucion/EliminarResolucion",
-                        method: "POST",
-                        async: "false",
-                        data: "",
-                        success: function (respuesta)
-                        {
-                            if (respuesta.validar)
-                            {
-                                $('#title-informacion').text(respuesta.titulo);
-                                $('#body-informacion').text(respuesta.msj);
-                                $('#modal-informacion').modal('show');
-                            }
-                            else
-                            {
-                                $('#title-alerta').text(respuesta.titulo);
-                                $('#body-alerta').text(respuesta.msj);
-                                $('#modal-alerta').modal('show');
-                            }
-                        }
-                    });
-                });
-
-                $('#btn-ResolucionEliminada').click(function (e)
-                {
-                    e.preventDefault();
-                    window.location.href = '/Proceso/VerProceso';
-                });
-
-            </script>
+            });
         }
+
+        function verOpciones(opcion)
+        {
+            var acciones = "";
+            switch (opcion)
+            {
+                case 3:
+                    acciones = '<div class="form-group  col-lg-6 col-md-6 col-sm-12"><button class="btn btn-secondary" id="volverProceso" style="width:100%"><i class="fas fa-sitemap"></i> Volver a proceso</button> </div>' +
+                        '<div class="form-group  col-lg-6 col-md-6 col-sm-12"><button class="btn btn-secondary" id="volverProcesos" style="width:100%"><i class="fas fa-clipboard-list"></i> Volver a procesos</button> </div>' +
+                        '<div class="form-group  col-lg-6 col-md-6 col-sm-12"><button class="modal-effect btn btn-warning" data-effect="effect-just-me" id = "modificar" style="width:100%"><i class="fas fa-pen-square"></i> Modificar</button> </div>' +
+                        '<div class="form-group  col-lg-6 col-md-6 col-sm-12"><button class="btn btn-danger" id = "eliminar" style="width:100%"><i class="fas fa-trash"></i> Eliminar</button> </div>';
+                    break;
+                default:
+                    acciones = '<div class="form-group  col-lg-6 col-md-6 col-sm-12"><button class="btn btn-secondary" id="volverProceso" style="width:100%"><i class="fas fa-sitemap"></i> Volver a proceso</button> </div>' +
+                        '<div class="form-group  col-lg-6 col-md-6 col-sm-12"><button class="btn btn-secondary" id="volverProcesos" style="width:100%"><i class="fas fa-clipboard-list"></i> Volver a procesos</button> </div>';
+                    break;
+            }
+
+            $('#acciones').empty().append(acciones);
+
+            $('#volverProceso').click(function (e)
+            {
+                e.preventDefault();
+                window.location.href = '/Proceso/VerProceso';
+            });
+
+            $('#volverProcesos').click(function (e)
+            {
+                e.preventDefault();
+                window.location.href = '/Proceso/Procesos/';
+            });
+
+            $('#modificar').click(function (e)
+            {
+                e.preventDefault();
+                window.location.href = '/Resolucion/ActualizarResolucion';
+            });
+
+            $('#eliminar').click(function (e)
+            {
+                $('#title-confirmar-eliminar').text("Eliminar datos");
+                $('#body-confirmar-eliminar').text("¿Está seguro que desea eliminar la resolución?");
+                $('#modal-confirmar-eliminar').modal('show');
+            });
+        }
+
+        $('#btnConfirmarEliminar').click(function (e)
+        {
+            e.preventDefault();
+            $('#modal-confirmar-eliminar').modal('hide');
+            $.ajax({
+                url: "/Resolucion/EliminarResolucion",
+                method: "POST",
+                async: "false",
+                data: "",
+                success: function (respuesta)
+                {
+                    if (respuesta.validar)
+                    {
+                        $('#title-informacion').text(respuesta.titulo);
+                        $('#body-informacion').text(respuesta.msj);
+                        $('#modal-informacion').modal('show');
+                    }
+                    else
+                    {
+                        $('#title-alerta').text(respuesta.titulo);
+                        $('#body-alerta').text(respuesta.msj);
+                        $('#modal-alerta').modal('show');
+                    }
+                }
+            });
+        });
+
+        $('#btn-ResolucionEliminada').click(function (e)
+        {
+            e.preventDefault();
+            window.location.href = '/Proceso/VerProceso';
+        });
+
+    </script>
+}
