--- a/Aplicacion web/SimRend/SimRend/Views/Solicitud/VerSolicitud.cshtml
+++ b/Aplicacion web/SimRend/SimRend/Views/Solicitud/VerSolicitud.cshtml
@@ -114,7 +114,7 @@
                     </div>
                 </div>
             </div>
-            <div class="card">
+            <div class="card" id="cardCategorias">
                 <div class="card-header" role="tab" id="headingTwo5">
                     <h6 class="mg-b-0">
                         <a class="collapsed transition" data-toggle="collapse" data-parent="#accordion5" href="#collapseTwo5" aria-expanded="false" aria-controls="collapseTwo5">
@@ -281,28 +281,54 @@
                 data: { 'idSolicitud': solicitud.id },
                 success: function (respuesta) {
                     datosPrincipales(respuesta.solicitud);
-                    categorias(respuesta.solicitud.categorias);
-                    if (respuesta.solicitud.tipoEvento === "Grupal") {
-                        participantes(respuesta.solicitud.participantes);
+                    
+
+                    if (respuesta.solicitud.categorias!=null)
+                    {
+                        categorias(respuesta.solicitud.categorias);
                     }
-                    else {
+                    else
+                    {
+                        $("#cardCategorias").css("display", "none");
+                    }
+
+                    if (respuesta.solicitud.tipoEvento === "Grupal") 
+                    {
+                        if (respuesta.solicitud.participantes.length > 1)
+                        {
+                            participantes(respuesta.solicitud.participantes);
+                        }
+                        else
+                        {
+                            $("#cardParticipantes").css("display", "none");
+                        }
+                    }
+                    else 
+                    {
                         $("#cardParticipantes").css("display", "none");
                     }
-                    verOpciones(respuesta.estado);
+                    verOpciones(respuesta.estado, respuesta.estadoFinal);
                 }
             });
         }
 
-        function verOpciones(opcion) {
+        function verOpciones(estado, estadoFinal) {
             var acciones = '';
-            if (opcion < 3) {
+            if (estado == 1 && estadoFinal == 'Cerrado')
+            {
+                acciones = '<div class="form-group  col-lg-6 col-md-6 col-sm-12"><button class="btn btn-secondary" id="volverProceso" style="width:100%"><i class="fas fa-arrow-alt-circle-left"></i> Volver a proceso</button> </div>' +
+                    '<div class="form-group  col-lg-6 col-md-6 col-sm-12"><button class="btn btn-secondary" id="volverProcesos" style="width:100%"><i class="fas fa-arrow-alt-circle-left"></i> Volver a procesos</button> </div>';
+            }
+            else if (estado == 2 && estadoFinal == 'Abierto') 
+            {
                 acciones = '<div class="form-group  col-lg-6 col-md-6 col-sm-12"><button class="btn btn-secondary" id="volverProceso" style="width:100%"><i class="fas fa-sitemap"></i> Volver a proceso</button> </div>' +
                     '<div class="form-group  col-lg-6 col-md-6 col-sm-12"><button class="btn btn-secondary" id="volverProcesos" style="width:100%"><i class="fas fa-clipboard-list"></i> Volver a procesos</button> </div>' +
                     '<div class="form-group  col-lg-6 col-md-6 col-sm-12"><button class="btn btn-warning" id = "modificar" style="width:100%"><i class="fas fa-pen-square"></i> Modificar</button> </div>' +
                     '<div class="form-group  col-lg-6 col-md-6 col-sm-12"><button class="btn btn-danger" id = "eliminar" style="width:100%"><i class="fas fa-trash"></i> Eliminar</button> </div>' +
                     '<div class="form-group  col-lg-12 col-md-12 col-sm-12"><button class="btn btn-info" id = "descargar" style="width:100%"><i class="fas fa-download"></i> Descargar</button> </div>';
             }
-            else {
+            else 
+            {
                 acciones = '<div class="form-group  col-lg-4 col-md-4 col-sm-12"><button class="btn btn-secondary" id="volverProceso" style="width:100%"><i class="fas fa-arrow-alt-circle-left"></i> Volver a proceso</button> </div>' +
                     '<div class="form-group  col-lg-4 col-md-4 col-sm-12"><button class="btn btn-secondary" id="volverProcesos" style="width:100%"><i class="fas fa-arrow-alt-circle-left"></i> Volver a procesos</button> </div>' +
                     '<div class="form-group  col-lg-4 col-md-4 col-sm-12"><button class="btn btn-info" id = "descargar" style="width:100%"><i class="fas fa-download"></i> Descargar</button> </div>';
